# cosentus-voice-enginev2

./: .gitignore  README.md  pyproject.toml
backend/voice-agent/app/: main.py
backend/voice-agent/app/bot/: bot.py
backend/voice-agent/app/config/: agent_config.py  settings.py
backend/voice-agent/app/hydration/: __init__.py  hydrator.py
backend/voice-agent/app/persistence/: call_writer.py
backend/voice-agent/app/runner/: __init__.py  daily_rooms.py  manager.py  metrics.py  protection.py  server.py
backend/voice-agent/app/services/: __init__.py  factory.py
backend/voice-agent/scripts/: walking_skeleton.py
backend/voice-agent/scripts/wave6/: scenario_e.py
backend/voice-agent/scripts/wave6-runs/b1-soak-2h/: REPORT.md  scenario_e.json  scenario_e.jsonl  (+1 more)
backend/voice-agent/tests/: test_main.py
backend/voice-agent/tests/bot/: test_bot.py
backend/voice-agent/tests/config/: test_agent_config.py  test_settings.py
backend/voice-agent/tests/hydration/: test_hydrator.py
backend/voice-agent/tests/persistence/: test_call_writer.py
backend/voice-agent/tests/runner/: test_daily_rooms.py  test_manager.py  test_metrics.py  test_protection.py  test_server.py
backend/voice-agent/tests/services/: test_factory.py
backend/voice-agent/tests/tools/: test_function_call_context_lifecycle.py  test_tool_frame_emissions.py
docs/: frontend-v2-alignment-audit.md  v2-tech-debt-log.md
docs/architecture/: migration-from-v1.md  overview.md
infrastructure/: .env.example  .gitignore  README.md
infrastructure/src/: config.ts  main.ts  ssm-parameters.ts
infrastructure/src/constructs/: alb.ts  ecs-service.ts  elevenlabs-health-check.ts  index.ts  monitoring.ts  task-recycler.ts  vpc.ts
infrastructure/src/stacks/: cert-stack.ts  compute-stack.ts  index.ts
