[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosentus-voice-engine"
version = "0.1.0"
description = "Cosentus voice agent platform engine — Pipecat pipeline running on AWS Fargate, Daily PSTN, AssemblyAI STT, ElevenLabs TTS, AWS Bedrock LLM."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Cosentus" },
]
license = { text = "Proprietary" }

# v2 ships on Pipecat 1.x from day one. v1 is pinned to 0.0.108 in
# production; that pin exists because v1 accumulated patches against
# the 0.0.x API and migration to 1.x has breaking changes v1 hasn't
# absorbed. v2 is greenfield — no inherited patches — so we start on
# the current stable line.
dependencies = [
    "pipecat-ai[daily,silero,elevenlabs,aws,webrtc,runner,assemblyai]>=1.1.0,<2.0.0",
    "boto3",
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "structlog",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["backend/voice-agent"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pipecat defaults everywhere — we only deviate from upstream Pipecat
# style when there's a Cosentus reason. Start with the conventional
# Python set and expand as patterns emerge.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["backend/voice-agent/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
